--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,20 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pandas numpy scipy scikit-learn matplotlib
 
-      # Commenting out test related components until we add tests
-      # - name: Run tests and generate coverage report
-      #   run: |
-      #     pytest --cov=. --cov-report=html
+      - name: Run tests and generate coverage report
+        run: |
+          cd tests
+          python test_driver.py
 
-      # - name: Upload coverage report
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: coverage-html-report
-      #     path: htmlcov
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-html-report
+          path: htmlcov
