wrangling github action errors
Changed cd tests to cd src/tests; made sure to install make.

more wrangling github action errors

Shouldn't need sudo in docs.yml.

even more wrangling github action errors

Ditching the 'make' thing altogether which I should've done in the first
place, just running sphinx-build directly.

finally squashing github action errors

One small fix regarding the path Github looks for the generated docs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests and generate coverage report
         run: |
-          cd tests
+          cd src/tests
           python test_driver.py
 
       - name: Upload coverage report
